--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "homepage": "https://github.com/tanbro/democonfapplet#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-server": "^0.1.0"
+    "gulp-webserver": "^0.9.1"
   }
 }
